--- a/M01S03/ex02/index.html
+++ b/M01S03/ex02/index.html
@@ -7,7 +7,19 @@
   <body>
 
     <script>
+      var person = {
+        name: 'Jon',
+        surname: 'Snow',
+        age: 35,
+        petOwner: true,
+        skills: {
+          html: true,
+          css: true,
+          javaScript: false
+        }
+      };
 
+      console.log(person.skills.javaScript);
     </script>
   </body>
 </html>
