--- a/M01S04/ex02/index.html
+++ b/M01S04/ex02/index.html
@@ -7,5 +7,25 @@
 <body>
 
     <!-- insert script tag here -->
+    <script>
+        var errorCode = 0;
+
+        if (errorCode === 0) {
+            console.log('No error');
+        } else if (errorCode === 100) {
+            console.lo('Error 100 occured');
+        } else if (errorCode === 200) {
+            console.log('Error 200');
+        }  else if (errorCode === 300) {
+            console.log('Error 300');
+        } else if (errorCode === 400) {
+            console.log('Error 400');
+        } else if (errorCode === 500) {
+            console.log('Error 500');
+        } else {
+            console.log('Something else');
+        }
+
+    </script>
 </body>
 </html>
