--- a/M01S04/ex04/index.html
+++ b/M01S04/ex04/index.html
@@ -7,5 +7,56 @@
 <body>
 
     <!-- insert script tag here -->
+    <script>
+
+console.warn('Modifica exemplul astfel incat bucla sa numere de la 1 la 100.');
+        var i;
+        for (i = 1; i <= 100; i++) {
+            console.log(i);
+        }
+
+console.warn('Modifica exemplul astfel incat bucla sa numere de la 1 la 99 (dar nu schimba numarul 100).');
+        var i;
+        for (i = 1; i < 100; i++) {
+            console.log(i);
+        }
+
+console.warn('Folosind keywordul break opreste bucla atunci cand numarul este egal cu 50 (dar afiseaza-l).');
+        var i;
+        for (i = 1; i < 100; i++) {
+            if (i > 50) {
+                break;
+            }
+            console.log(i);
+        }
+
+console.warn('Folosind keywordul continue afiseaza doar numerele pare intre 1 si 100 (inclusiv 100).');
+        var i;
+        for (i=1; i<= 100; i++) {
+            if (i % 2 !== 0) {
+                continue;
+            }
+            console.log(i);
+        }
+
+console.warn('In mod similar, afiseaza doar numerele care sunt divizibile cu 5. ');
+var i;
+        for (i=1; i<= 100; i++) {
+            if (i % 5 !== 0) {
+                continue;
+            }
+            console.log(i);
+        }
+
+        console.log('sau');
+        var i;
+        for (i=1; i<= 100; i++) {
+            if (i % 5 === 0) {
+            console.log(i);
+            }
+        }
+
+
+    </script>
 </body>
 </html>
