--- a/M01S05/ex08/index.html
+++ b/M01S05/ex08/index.html
@@ -5,6 +5,9 @@
     <title>Anonymous Functions</title>
 </head>
 <body>
-
+    <button id="clicker">Click me!</button>
+    <button id="remover">Elimina event</button>
+    
+    <script src="app.js"></script>
 </body>
 </html>
