--- a/M01S06/ex03/index.html
+++ b/M01S06/ex03/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>User Agent</title>
+    <title>DOM</title>
     <script src="app.js"></script>
 </head>
 <body>
