--- a/hangman/html/index.html
+++ b/hangman/html/index.html
@@ -9,13 +9,80 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-  <div style="padding: 25px; background-color: darkcyan; width: 200px; height: 200px;">
-    <div class="eye">
-      <div class="eye__lid"></div>
-        <div class="eye__pupil">
-          <div class="eye__reflection"></div>
-        </div>
+
+  <div class="container">
+    <div class="row mt-4">
+      <div class="col">
+        <h1>Hangman <span id="js-tries"></span></h1>
+      </div>
     </div>
+
+    <div class="row">
+      <div class="col-12 col-md-8 d-flex flex-column justify-content-around">
+        <div id="js-word"></div>
+        <div class="message align-self-md-end"></div>
+      </div>
+      <div class="col-12 col-md-4">
+        <div class="face" id="js-face">
+          <div class="eye eye--blinking">
+            <div class="eye__lid"></div>
+              <div class="eye__pupil">
+                <div class="eye__reflection"></div>
+              </div>
+          </div>
+          <div class="eye eye--blinking eye--annoyed eye--worried">
+            <div class="eye__lid"></div>
+              <div class="eye__pupil">
+                <div class="eye__reflection"></div>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row mt-3">
+      <div class="col-12 col-md-8">
+        <div class="keyboard ">
+          <div class="d-flex justify-content-center align-items-center">
+            <button class="btn btn-secondary m-1">Q</button>
+            <button class="btn btn-secondary m-1">W</button>
+            <button class="btn btn-secondary m-1">E</button>
+            <button class="btn btn-secondary m-1">R</button>
+            <button class="btn btn-secondary m-1">T</button>
+            <button class="btn btn-secondary m-1">Y</button>
+            <button class="btn btn-secondary m-1">U</button>
+            <button class="btn btn-secondary m-1">I</button>
+            <button class="btn btn-secondary m-1">O</button>
+            <button class="btn btn-secondary m-1">P</button>
+          </div>
+          <div class="d-flex justify-content-center align-items-center">
+            <button class="btn btn-secondary m-1">A</button>
+            <button class="btn btn-secondary m-1">S</button>
+            <button class="btn btn-secondary m-1">D</button>
+            <button class="btn btn-secondary m-1">F</button>
+            <button class="btn btn-secondary m-1">G</button>
+            <button class="btn btn-secondary m-1">H</button>
+            <button class="btn btn-secondary m-1">J</button>
+            <button class="btn btn-secondary m-1">K</button>
+            <button class="btn btn-secondary m-1">L</button>
+          </div>
+          <div class="d-flex justify-content-center align-items-center">
+            <button class="btn btn-secondary m-1">Z</button>
+            <button class="btn btn-secondary m-1">X</button>
+            <button class="btn btn-secondary m-1">C</button>
+            <button class="btn btn-secondary m-1">V</button>
+            <button class="btn btn-secondary m-1">B</button>
+            <button class="btn btn-secondary m-1">N</button>
+            <button class="btn btn-secondary m-1">M</button>
+          </div>
+
+        </div>
+      </div>
+      <div class="col-12 col-md-4 d-flex justify-content-start align-items-end">
+        <button class="button-reset btn btn-outline-danger btn-lg">Reset game</button>
+      </div>
+    </div>
+
   </div>
 
   <script src="/js/app.min.js"></script>
