--- a/M02S01/ex04/index.html
+++ b/M02S01/ex04/index.html
@@ -31,6 +31,47 @@
     </div>
   </div> -->
 
+  <!-- <div class="frame">
+    <div class="bike frame__bike">
+      <div class="bike__body">
+        <div class="top-tube"></div>
+        <div class="fork-tube"></div>
+        <div class="seat-tube"></div>
+        <div class="back-tube"></div>
+        <div class="down-tube"></div>
+        <div class="chain-tube"></div>
+        <div class="bike__light bike__light--front"></div>
+        <div class="bike__light bike__light--back"></div>
+
+      </div>
+      <div class="bike__seat">
+        <div class="seat-base"></div>
+        <div class="seat-front"></div>
+      </div>
+      <div class="bike__handlers">
+        <div class="base"></div>
+        <div class="bar"></div>
+        <div class="handle"></div>
+      </div>
+      <div class="bike__wheel bike__wheel--front">
+        <div class="center"></div>
+        <div class="spoke"></div>
+        <div class="spoke spoke spoke--1"></div>
+        <div class="spoke spoke--2"></div>
+        <div class="spoke spoke--3"></div>
+        <div class="spoke spoke--4"></div>
+      </div>
+      <div class="bike__wheel bike__wheel--back">
+        <div class="center"></div>
+        <div class="spoke"></div>
+        <div class="spoke spoke spoke--1"></div>
+        <div class="spoke spoke--2"></div>
+        <div class="spoke spoke--3"></div>
+        <div class="spoke spoke--4"></div>
+      </div>
+    </div>
+  </div> -->
+
 
   
   
