--- a/M02S02/ex01/index.html
+++ b/M02S02/ex01/index.html
@@ -7,6 +7,13 @@
       .error {
         color: red;
       }
+
+      .container {
+        width: 100%;
+        max-width: 1290px;
+        margin: 0 auto;
+        text-align: center;
+      }
     </style>
 </head>
 <body>
