--- a/hangman/html/index.html
+++ b/hangman/html/index.html
@@ -78,8 +78,10 @@
 
         </div>
       </div>
-      <div class="col-12 col-md-4 d-flex justify-content-start align-items-end">
-        <button class="button-reset btn btn-outline-danger btn-lg">Reset game</button>
+      <div class="col-12 col-md-4 d-flex justify-content-between align-items-center">
+        <button class="button-reset btn btn-outline-danger mx-1">Reset game</button>
+        <button class="button-reset btn btn-outline-danger mx-1">Reset & 1 extra try</button>
+        <button class="button-reset btn btn-outline-danger mx-1">Reset & 2 extra tries</button>
       </div>
     </div>
 
