update event delegation Tema 25 iulie

--- a/hangman/html/index.html
+++ b/hangman/html/index.html
@@ -78,10 +78,10 @@
 
         </div>
       </div>
-      <div class="col-12 col-md-4 d-flex justify-content-between align-items-center">
-        <button class="button-reset btn btn-outline-danger mx-1">Reset game</button>
-        <button class="button-reset btn btn-outline-danger mx-1">Reset & 1 extra try</button>
-        <button class="button-reset btn btn-outline-danger mx-1">Reset & 2 extra tries</button>
+      <div class="tries-control col-12 col-md-8 d-flex justify-content-around align-items-center mt-3">
+        <button class="reset-standard btn btn-outline-danger mx-1">Reset & standard tries</button>
+        <button class="reset-extra1 btn btn-outline-danger mx-1">Reset & 1 extra try</button>
+        <button class="reset-extra2 btn btn-outline-danger mx-1">Reset & 2 extra tries</button>
       </div>
     </div>
 
