--- a/M02S03/ex03/index.html
+++ b/M02S03/ex03/index.html
@@ -7,9 +7,9 @@
       body {
         width: 100vw;
         height: 100vh;
-        display: flex;
+        /* display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: center; */
       }
       .stage {
         width: 300px;
