--- a/M02S03/ex04/index.html
+++ b/M02S03/ex04/index.html
@@ -9,6 +9,10 @@
 
   <img src="http://lorempixel.com/output/food-q-c-350-350-7.jpg" class="image">
 
+  <!-- <img src="https://placekitten.com/408/287" class="image" alt=""> -->
+
+  <p class="message-para">Imaginea se incarca...</p>
+
   <script src="app.js"></script>
 </body>
 </html>
