M02S03 - final / M02S04 - animatii CSS

--- a/M02S03/ex06/index.html
+++ b/M02S03/ex06/index.html
@@ -10,11 +10,11 @@
 <body>
 
   <section>
-    <button class="btn"></button>
+    <button class="btn">Click me</button>
   </section>
 
   <section>
-    <article class="display lo-res">
+    <article class="display low-res">
       <h1>Sub 650</h1>
     </article>
 
