--- a/M02S04/ex02/index.html
+++ b/M02S04/ex02/index.html
@@ -9,6 +9,7 @@
         height: 100px; 
         border: 1px solid #000;
         transition: background-color 1s ease;
+        margin-bottom: 10px;
       }
 
     </style>
@@ -16,6 +17,16 @@
 <body>
   
   <div class="box"></div>
+
+  <button class="btn">Red</button>
+  <button class="btn">Green</button>
+  <button class="btn">Blue</button>
+
+  <input type="color" id="color-input">
+  <button>Apply</button>
+
+  <button id="reset-bg">Remove</button>
+
 
   <script src="app.js"></script>
 </body>
