--- a/M02S04/ex01/index.html
+++ b/M02S04/ex01/index.html
@@ -19,6 +19,8 @@
 <body>
   
   <div class="box"></div>
+  <button id="apply-style">Aplica</button>
+  <button id="darken">Intuneca</button>
 
   <script src="app.js"></script>
 </body>
