--- a/M02S03/ex09/index.html
+++ b/M02S03/ex09/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>DOM Events - resize</title>        
+    <title>DOM Events - resize</title>
 
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Navigatia mea</h1>
-  <ul>
+  <h1 class="nav-title">Navigatia mea</h1>
+  <ul class="nav-list">
     <li><a href="">link1</a></li>
     <li><a href="">link2</a></li>
     <li><a href="">link3</a></li>
