--- a/M02S06/ex06/index.html
+++ b/M02S06/ex06/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <form action="http://localhost:8080/persons">
+  <form >
     <div>
       <label for="name">Nume:</label>
       <input id="name" name="name" placeholder="Name">  
